# company-insight-agent

./: README.md  a.py  career.py  chat-agent.py  chat.py  chat2.py  chat_agent.py  chat_with_history.py  insight-agent.py  insight_agent.py  pyproject.toml  simple_chat_with_history.py  simplechat.py
docs/: README.md  responses.md
notebooks/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  Untitled.ipynb  chatandgr.ipynb  simplechat.ipynb
